archive/kubernetes/firefly-iii-data-importer/deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: firefly-iii-data-importer
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 0
  template:
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        - name: firefly-iii-data-importer
          image: fireflyiii/data-importer:version-1.4.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 120
            periodSeconds: 300
            successThreshold: 1
            timeoutSeconds: 10
