archive/kubernetes/firefly-iii-data-importer/service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: firefly-iii-data-importer
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: firefly-iii-data-importer
