archive/kubernetes/firefly-iii-data-importer/ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: firefly-iii-data-importer
  annotations:
    external-dns.alpha.kubernetes.io/hostname: fidi.home.es.
    external-dns.alpha.kubernetes.io/target: home.es.
spec:
  rules:
    - host: fidi.home.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: firefly-iii-data-importer
                port:
                  name: http
